i am editing this repo

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <p>I've made a repo for this website </p>
     <p>i will publish it</p>
+    <p>now i am editing and uploading this edited vertsion</p>
 </body>
 </html>
