--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <p>I've made a repo for this website </p>
     <p>i will publish it</p>
     <p>now i am editing and uploading this edited vertsion</p>
+    <p>i have created some new branch</p>
+    <p>now i'm in new branch2</p>
+    <p>this is my typing for new branch3</p>
 </body>
 </html>
