--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>i'm writing for new branch 3</p>
     <p>this is typing for new branch 4</p>
     <p>for nb5</p>
+    <p>it was really in teresting</p>
+    <p>i enjoyed this new branch class</p>
 </body>
 </html>
