--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>for nb5</p>
     <p>it was really in teresting</p>
     <p>i enjoyed this new branch class</p>
+    <p>its git new 6</p>
 </body>
 </html>
